--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 # Created by https://www.toptal.com/developers/gitignore/api/vim,linux,latex
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,linux,latex
 
